[build-system]
requires = ["flit_core >=3.7.1,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jupyterlab_robotmode"
version = "0.5.0"
description = "A JupyterLab extension which adds a CodeMirror mode for Robot Framework syntax"
authors = [
    {name = "MarketSquare"},
]
readme = "README.md"
classifiers = [
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter",
    "Framework :: Robot Framework",
    "Framework :: Robot Framework :: Tool",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "jupyterlab>=4,<5",
]

[project.urls]
"Bug Tracker" = "https://github.com/MarketSquare/jupyterlab_robotmode/issues"
"Source" = "https://github.com/MarketSquare/jupyterlab_robotmode"

[tool.flit.sdist]
include = ["jupyterlab_robotmode/_prefix"]

[tool.flit.external-data]
directory = "jupyterlab_robotmode/_prefix"
